--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 version: "3"
 services:
+  https-portal:
+    image: steveltn/https-portal:1
+    ports:
+      - '80:80'
+      - '443:443'
+    restart: always
+    environment:
+      DOMAINS: 'n-okamoto.t.telsys.co.jp:3333 -> http://n-okamoto.t.telsys.co.jp:3333'
+      STAGE: production
   node:
     build: node/.
     volumes:
